// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabelledCheckbox /> should render with byline of "this is a byline" 1`] = `
<DocumentFragment>
  <div
    class="mx_LabelledCheckbox"
  >
    <form
      class="_root_19upo_16"
    >
      <div
        class="_inline-field_19upo_32"
      >
        <div
          class="_inline-field-control_19upo_44"
        >
          <div
            class="_container_1hel1_10"
          >
            <input
              aria-describedby=":r4:"
              checked=""
              class="_input_1hel1_18"
              id="checkbox_vY7Q4uEh9K"
              type="checkbox"
            />
            <div
              class="_ui_1hel1_19"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="_inline-field-body_19upo_38"
        >
          <label
            class="_label_19upo_59"
            for="checkbox_vY7Q4uEh9K"
          >
            <span
              class="mx_LabelledCheckbox_label"
            >
              Hello world
            </span>
          </label>
          <span
            class="_message_19upo_85 _help-message_19upo_91"
            id=":r4:"
          >
            this is a byline
          </span>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`<LabelledCheckbox /> should render with byline of undefined 1`] = `
<DocumentFragment>
  <div
    class="mx_LabelledCheckbox"
  >
    <form
      class="_root_19upo_16"
    >
      <div
        class="_inline-field_19upo_32"
      >
        <div
          class="_inline-field-control_19upo_44"
        >
          <div
            class="_container_1hel1_10"
          >
            <input
              checked=""
              class="_input_1hel1_18"
              id="checkbox_vY7Q4uEh9K"
              type="checkbox"
            />
            <div
              class="_ui_1hel1_19"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="_inline-field-body_19upo_38"
        >
          <label
            class="_label_19upo_59"
            for="checkbox_vY7Q4uEh9K"
          >
            <span
              class="mx_LabelledCheckbox_label"
            >
              Hello world
            </span>
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
